# quicmop

./: Cargo.toml  Cross.toml  LICENSE  Makefile  README.md
crates/netobserv-flow-proto/: Cargo.toml  build.rs
crates/netobserv-flow-proto/src/: lib.rs
crates/quicmop-metrics/: Cargo.toml
crates/quicmop-metrics-exporters/: Cargo.toml
crates/quicmop-metrics-exporters/src/: bufwriter.rs  file.rs  lib.rs  scrape.rs  stdout.rs
crates/quicmop-metrics/src/: lib.rs  metrics.rs  system_metrics.rs
crates/quicmop-proto/: Cargo.toml  build.rs
crates/quicmop-proto/src/: lib.rs
crates/quicmop-signals/: Cargo.toml
crates/quicmop-signals/src/: lib.rs
distribution/: collector-config.yaml  kernel-agent-config.yaml  netobserv-ebpf-agent-adapter-config.yaml  qlog-agent-config.yaml
distribution/container/: Containerfile-collector.alpine  Containerfile-collector.debian  Containerfile-kernel-agent.alpine  Containerfile-kernel-agent.debian  Containerfile-netobserv-ebpf-agent-adapter.alpine  Containerfile-netobserv-ebpf-agent-adapter.debian  Containerfile-qlog-agent.alpine  Containerfile-qlog-agent.debian
distribution/systemd/: quicmop-collector.service  quicmop-kernel-agent.service  quicmop-netobserv-ebpf-agent-adapter.service  quicmop-qlog-agent.service
doc/: README.md
doc/man/: quicmop-collector.1.scd
proto/netobserv/: flow.proto
proto/quicmop/: quicmop.proto
