[workspace]
members = [ "bin/*", "crates/*" ]
resolver = "2"

[workspace.package]
authors = ["John Todd <jtodd@quad9.net>", "Ensar Sarajčić <dev@ensarsarajcic.com>"]
description = "TODO quicmop"
edition = "2024"
repository = "https://github.com/Quad9DNS/quicmop"
license = "AGPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/Quad9DNS/quicmop"
version = "0.1.0"

[workspace.dependencies]
netobserv-flow-proto = { path = "./crates/netobserv-flow-proto" }
quicmop-metrics-exporters = { path = "./crates/quicmop-metrics-exporters" }
quicmop-metrics = { path = "./crates/quicmop-metrics" }
quicmop-proto = { path = "./crates/quicmop-proto" }
quicmop-signals = { path = "./crates/quicmop-signals" }

arc-swap = { version = "1.9.1" }
async-stream = { version = "0.3.6" }
axum = { version = "0.8.9" }
clap = { version = "4.5.36" }
criterion = { version = "0.8.2" }
exitcode = { version = "1.1.2" }
futures = { version = "0.3.31" }
ipnet = { version = "2.12.0" }
metrics = { version = "0.24.2" }
metrics-exporter-prometheus = { version = "0.18.3" }
metrics-util = { version = "0.19.1" }
moka = { version = "0.12.15", features = ["future"] }
netlink-sys = "0.8"
netlink-packet-core = "0.8.1"
netlink-packet-route = { version = "0.30.0" }
netlink-packet-sock-diag = { path = "./vendor/netlink-packet-sock-diag", features = ["rich_nlas"] }
prost = { version = "0.14.3" }
prost-types = { version = "0.14.3" }
rustix = { version = "1.1.4" }
serde = { version = "1.0.219" }
serde_json = { version = "1.0.140" }
serde_yaml = { version = "0.9.34" } # Look for replacement
snafu = { version = "0.8.5" }
sysinfo = { version = "0.35.0" }
tokio = { version = "1.50.0" }
tokio-stream = { version = "0.1.18" }
tonic = { version = "0.14.5" }
tonic-prost = { version = "0.14.5" }
tonic-prost-build = { version = "0.14.5" }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19" }
