[package]
name = "netobserv-flow-proto"
authors.workspace = true
description.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
version.workspace = true

[dependencies]
prost-types.workspace = true
prost.workspace = true
tonic-prost.workspace = true
tonic.workspace = true

[build-dependencies]
tonic-prost-build.workspace = true
