[package]
name = "quicmop-signals"
authors.workspace = true
description.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
version.workspace = true

[dependencies]
async-stream.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
